--- a/src/app/componentes/banner/banner.component.html
+++ b/src/app/componentes/banner/banner.component.html
@@ -1,4 +1,4 @@
 <header class="banner">
-    <app-boas-vindas class="boas-vindas"/>
-    <app-conta class="conta"></app-conta>
+  <app-boas-vindas class="boas-vindas" />
+  <app-conta [saldo]="saldo()" class="conta" />
 </header>
